# starneighbours

./: README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: test.yaml
docker/: Dockerfile
starneighbours/: exceptions.py  main.py  settings.py
starneighbours/app/: auth.py  helpers.py  starneighbours.py
starneighbours/routers/: auth_router.py  stars_router.py
starneighbours/routers/validators/: stars_validator.py
static/: login.html  login.html.template
tests/: conftest.py  mocks.py  test_auth.py  test_starneighbours.py
